@@ -8,6 +8,7 @@ package org.elasticsearch.license;
 
 import org.elasticsearch.analysis.common.CommonAnalysisPlugin;
 import org.elasticsearch.cluster.node.DiscoveryNodeRole;
+import org.elasticsearch.common.collect.Set;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.unit.TimeValue;
 import org.elasticsearch.env.Environment;
@@ -22,7 +23,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 
 import static org.elasticsearch.test.ESIntegTestCase.Scope.TEST;
 import static org.elasticsearch.test.NodeRoles.addRoles;
@@ -32,8 +32,8 @@ import static org.hamcrest.CoreMatchers.equalTo;
 public class LicenseServiceClusterTests extends AbstractLicensesIntegrationTestCase {
 
     @Override
-    protected Settings nodeSettings(int nodeOrdinal) {
-        return nodeSettingsBuilder(nodeOrdinal).build();
+    protected Settings nodeSettings(int nodeOrdinal, Settings otherSettings) {
+        return nodeSettingsBuilder(nodeOrdinal, otherSettings).build();
     }
 
     @Override
@@ -41,9 +41,9 @@ public class LicenseServiceClusterTests extends AbstractLicensesIntegrationTestC
         return false; // enable http
     }
 
-    private Settings.Builder nodeSettingsBuilder(int nodeOrdinal) {
+    private Settings.Builder nodeSettingsBuilder(int nodeOrdinal, Settings otherSettings) {
         return Settings.builder()
-            .put(addRoles(super.nodeSettings(nodeOrdinal), Collections.singleton(DiscoveryNodeRole.DATA_ROLE)))
+            .put(addRoles(super.nodeSettings(nodeOrdinal, otherSettings), Set.of(DiscoveryNodeRole.DATA_ROLE)))
             .put("resource.reload.interval.high", "500ms"); // for license mode file watcher
     }
 
